fix: banner alignment for smaller screen

--- a/src/components/Banner/BannerModule.css
+++ b/src/components/Banner/BannerModule.css
@@ -3,17 +3,15 @@
   height: 400px;
   border-radius: 50%; /* Makes the image circular */
   object-fit: cover; /* Ensures the image fills the frame */
-  border: 2px solid;
-  border-color: violet;
+  border: 2px solid violet;
   display: block;
   margin: 0 auto; /* Centers the image */
   transition: all 0.5s ease-in-out; /* Smooth transition */
 }
 
-/* Apply different size for mobile screens with transition */
+/* Responsive Design for Mobile Screens */
 @media (max-width: 1198px) {
   .banner .row {
-    display: flex;
     flex-direction: column; /* Text below, Image on top */
   }
 
@@ -33,12 +31,16 @@
   .banner p {
     text-align: center !important;
     font-size: 19px !important;
+    margin: 10px;
+    margin-left: 13px;
   }
-  .banner button {
-    align-items: center !important;
+  .resume-btn {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
   }
 }
-/* Default: Left-align on large screens (≥990px) */
+/* Default Tagline Styling */
 .tagline-wrapper {
   display: flex;
   justify-content: flex-start; /* Aligns left */
@@ -47,10 +49,10 @@
 /* Center the whole div on smaller screens (≤990px) */
 @media (max-width: 1190px) {
   .tagline-wrapper {
-    justify-content: center; /* Centers the div */
+    justify-content: center;
   }
 }
-
+/* ------------Banner Section ---------------*/
 .banner {
   margin-top: 0;
   padding: 100px 0 50px 0;
@@ -59,13 +61,7 @@
   font-weight: 700;
   letter-spacing: 0.8px;
   padding: 8px 10px;
-  /* background: linear-gradient(90.21deg,#0da02daf -5.91%,#b9b602d2 111.58%); */
-  background: linear-gradient(
-    90.21deg,
-    #c62368 -5.91%,
-    rgba(74, 47, 189, 0.5) 111.58%
-  );
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  background: linear-gradient(90.21deg, #c62368 -5.91%, #4a2fbd 111.58%);
   font-size: 20px;
   margin-bottom: 16px;
   display: inline-block;
@@ -75,10 +71,11 @@
   font-size: 65px;
   font-weight: 700;
   letter-spacing: 0.8px;
-  line-height: 1;
   margin-bottom: 10px;
-  display: block;
   text-align: left;
+}
+.banner .name-highlight {
+  color: #c62368;
 }
 .banner p {
   color: #b8b8b8;
@@ -88,7 +85,8 @@
   width: 96%;
   text-align: left;
 }
-.banner button {
+/* Resume Button */
+.resume-btn {
   color: #fff;
   border: none;
   font-weight: 700;
@@ -98,14 +96,8 @@
   display: flex;
   align-items: center;
 }
-.banner button:hover {
-  color: #ffff;
-  /* background: linear-gradient(90.21deg, #00420080 -5.91%, #00f53580 111.58%); */
-  background: linear-gradient(
-    90.21deg,
-    rgba(170, 54, 124, 0.5) -5.91%,
-    rgba(74, 47, 189, 0.5) 111.58%
-  );
+.resume-btn:hover {
+  background: linear-gradient(90.21deg, #c62368 -5.91%, #4a2fbd 111.58%);
 }
 
 .bg {
